fix chat template

--- a/exp/grpo/train.ipynb
+++ b/exp/grpo/train.ipynb
@@ -30,15 +30,15 @@
      "output_type": "stream",
      "text": [
       "🦥 Unsloth: Will patch your computer to enable 2x faster free finetuning.\n",
-      "INFO 10-08 02:58:57 [__init__.py:216] Automatically detected platform cuda.\n"
+      "INFO 10-08 03:07:26 [__init__.py:216] Automatically detected platform cuda.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "W1008 02:58:57.884000 592413 torch/utils/cpp_extension.py:2425] TORCH_CUDA_ARCH_LIST is not set, all archs for visible cards are included for compilation. \n",
-      "W1008 02:58:57.884000 592413 torch/utils/cpp_extension.py:2425] If this is not desired, please set os.environ['TORCH_CUDA_ARCH_LIST'] to specific architectures.\n"
+      "W1008 03:07:27.222000 609836 torch/utils/cpp_extension.py:2425] TORCH_CUDA_ARCH_LIST is not set, all archs for visible cards are included for compilation. \n",
+      "W1008 03:07:27.222000 609836 torch/utils/cpp_extension.py:2425] If this is not desired, please set os.environ['TORCH_CUDA_ARCH_LIST'] to specific architectures.\n"
      ]
     },
     {
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f58ada15",
    "metadata": {},
    "outputs": [],
@@ -734,19 +734,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Unsloth: Tokenizing [\"prompt\"] (num_proc=32):   0%|          | 0/1200 [00:00<?, ? examples/s]"
+      "Unsloth: Tokenizing [\"prompt\"] (num_proc=32): 100%|██████████| 250/250 [00:01<00:00, 185.78 examples/s]\n",
+      "Unsloth: Tokenizing [\"prompt\"] (num_proc=32): 100%|██████████| 500/500 [00:01<00:00, 359.09 examples/s]\n",
+      "==((====))==  Unsloth - 2x faster free finetuning | Num GPUs used = 1\n",
+      "   \\\\   /|    Num examples = 250 | Num Epochs = 50 | Total steps = 200\n",
+      "O^O/ \\_/ \\    Batch size per device = 16 | Gradient accumulation steps = 4\n",
+      "\\        /    Data Parallel GPUs = 1 | Total batch size (16 x 4 x 1) = 64\n",
+      " \"-____-\"     Trainable parameters = 983,040 of 355,467,008 (0.28% trained)\n"
      ]
     },
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unsloth: Tokenizing [\"prompt\"] (num_proc=32): 100%|██████████| 1200/1200 [00:01<00:00, 751.69 examples/s] \n",
-      "==((====))==  Unsloth - 2x faster free finetuning | Num GPUs used = 1\n",
-      "   \\\\   /|    Num examples = 1,200 | Num Epochs = 2 | Total steps = 150\n",
-      "O^O/ \\_/ \\    Batch size per device = 16 | Gradient accumulation steps = 1\n",
-      "\\        /    Data Parallel GPUs = 1 | Total batch size (16 x 1 x 1) = 16\n",
-      " \"-____-\"     Trainable parameters = 983,040 of 355,467,008 (0.28% trained)\n"
+      "Unsloth: Will smartly offload gradients to save VRAM!\n"
      ]
     },
     {
@@ -755,8 +756,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='150' max='150' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [150/150 03:26, Epoch 2/2]\n",
+       "      <progress value='68' max='200' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [ 68/200 07:23 < 14:47, 0.15 it/s, Epoch 16.75/50]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -768,123 +769,55 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>5</td>\n",
-       "      <td>0.805200</td>\n",
+       "      <td>4.172000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>10</td>\n",
-       "      <td>0.814700</td>\n",
+       "      <td>4.020200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>15</td>\n",
-       "      <td>0.781400</td>\n",
+       "      <td>3.745900</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>20</td>\n",
-       "      <td>0.760500</td>\n",
+       "      <td>3.447100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>25</td>\n",
-       "      <td>0.751900</td>\n",
+       "      <td>3.181800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>30</td>\n",
-       "      <td>0.743900</td>\n",
+       "      <td>3.012700</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>35</td>\n",
-       "      <td>0.725900</td>\n",
+       "      <td>2.789800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>40</td>\n",
-       "      <td>0.751300</td>\n",
+       "      <td>2.623700</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>45</td>\n",
-       "      <td>0.703800</td>\n",
+       "      <td>2.476200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>50</td>\n",
-       "      <td>0.709500</td>\n",
+       "      <td>2.324400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>55</td>\n",
-       "      <td>0.699000</td>\n",
+       "      <td>2.223700</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>60</td>\n",
-       "      <td>0.701800</td>\n",
+       "      <td>2.075800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>65</td>\n",
-       "      <td>0.724700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>70</td>\n",
-       "      <td>0.748100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>75</td>\n",
-       "      <td>0.712900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>80</td>\n",
-       "      <td>0.778300</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>85</td>\n",
-       "      <td>0.704800</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>90</td>\n",
-       "      <td>0.718600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>95</td>\n",
-       "      <td>0.713100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>100</td>\n",
-       "      <td>0.688900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>105</td>\n",
-       "      <td>0.752700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>110</td>\n",
-       "      <td>0.708700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>115</td>\n",
-       "      <td>0.735700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>120</td>\n",
-       "      <td>0.747700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>125</td>\n",
-       "      <td>0.691800</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>130</td>\n",
-       "      <td>0.702400</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>135</td>\n",
-       "      <td>0.692100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>140</td>\n",
-       "      <td>0.622500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>145</td>\n",
-       "      <td>0.714000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>150</td>\n",
-       "      <td>0.662500</td>\n",
+       "      <td>1.993900</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
@@ -895,16 +828,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "TrainOutput(global_step=150, training_loss=0.7256097173690796, metrics={'train_runtime': 207.6896, 'train_samples_per_second': 11.556, 'train_steps_per_second': 0.722, 'total_flos': 1.0807700146962432e+16, 'train_loss': 0.7256097173690796, 'epoch': 2.0})"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -917,7 +840,7 @@
     "    model = model,\n",
     "    tokenizer = tokenizer,\n",
     "    train_dataset = train_dataset_sft,\n",
-    "    eval_dataset=eval_dataset_sft\n",
+    "    eval_dataset=eval_dataset_sft,\n",
     "    args = SFTConfig(\n",
     "        dataset_text_field = \"prompt\",\n",
     "        per_device_train_batch_size = 16,\n",
@@ -941,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "057ad746",
    "metadata": {},
    "outputs": [
@@ -998,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "df24b9b1",
    "metadata": {},
    "outputs": [],
@@ -1009,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "f13ad960",
    "metadata": {},
    "outputs": [
